cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_403.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/statem/statem_dtls.c:642: error: DEAD_STORE
  The value written to &i (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/statem/statem_dtls.c:642:5: Write of unused value
640.   dtls1_process_out_of_seq_message(SSL *s, const struct hm_header_st *msg_hdr)
641.   {
642.       int i = -1;
           ^
643.       hm_fragment *frag = NULL;
644.       pitem *item = NULL;
